[metadata]
name = sl-parser
version = 0.0.1
author = Andżelika Domańska
author_email = adomanska9@gmail.com
description = SL Parser for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adomanska/sl-parser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = sl_parser
packages = find:
python_requires = >=3.6

[options.packages.find]
where = sl_parser